--- a/README.rdoc
+++ b/README.rdoc
@@ -19,23 +19,10 @@ Installation:
 
 -----------------------------------------
 
-* Ruby version: 2.2.1
+* Ruby version 2.2.0
 
-* Rails version: 4.2.4
+* System dependencies: Docker Engine version 1.7.1 or greater
 
-* System dependencies
+* Database creation `docker-compose run web rake db:create`
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
+* Deployment instructions: see Docker documentation https://docs.docker.com/compose/rails/
