Any user can access the party playlist by its spotify id    * Need to store owners credentials in DB

--- a/README.rdoc
+++ b/README.rdoc
@@ -26,3 +26,5 @@ Installation:
 * Database creation `docker-compose run web rake db:create`
 
 * Deployment instructions: see Docker documentation https://docs.docker.com/compose/rails/
+
+* Running on docker: type `docker-compose up`, server will run on http://localhost:3000
